<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ConfiguratorMenu">

    <ImageButton
        android:id="@+id/back_button_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="@color/white"
        android:contentDescription="@string/back_button_description"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/back_button"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="192dp"
        android:layout_height="86dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/choose_configurator"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/back_button_details"
        app:layout_constraintTop_toBottomOf="@+id/back_button_details" />


    <FrameLayout
        android:id="@+id/frameLayoutAuto"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <View
            android:id="@+id/background_layerAuto"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:background="@drawable/reg_login_background"
            android:visibility="visible" />

        <Button
            android:id="@+id/AutomaticBtn"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/automatic" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayoutManual"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <View
            android:id="@+id/background_layerManual"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:background="@drawable/reg_login_background"
            android:visibility="visible" />

        <Button
            android:id="@+id/ManualBtn"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/manual" />

    </FrameLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/load_configuration"
        android:fontFamily="@font/montserrat_semibold"
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/frameLayoutAuto"
        app:layout_constraintTop_toBottomOf="@+id/frameLayoutAuto" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:layout_constraintVertical_bias="0.0">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/confRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginHorizontal="24dp"
            >

        </androidx.recyclerview.widget.RecyclerView>

        <ProgressBar
            android:id="@+id/confProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>