<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Home_Page">


    <TextView
        android:id="@+id/textView"
        android:layout_width="257dp"
        android:layout_height="62dp"
        android:layout_marginTop="160dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/welcome_to_pc_configurator_app"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.0">

        <View
            android:id="@+id/background_login"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginBottom="460dp"
            android:background="@drawable/reg_login_background"
            android:visibility="visible" />

        <Button
            android:id="@+id/login_page_btn"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/login" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout"
        app:layout_constraintVertical_bias="0.0">

        <View
            android:id="@+id/background_registration"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:layout_marginBottom="388dp"
            android:background="@drawable/reg_login_background"
            android:visibility="visible"

            />

        <Button
            android:id="@+id/registration_page_btn"
            android:layout_width="170dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/transparent"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/register" />
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>